@@ -117,13 +117,13 @@ format.Date <- function(x, ...)
     xx
 }
 
-## could handle arrays for max.print \\ keep in sync with print.POSIX?t() in ./datetime.R
+## keep in sync with  print.POSIX?t()  in ./datetime.R
 print.Date <- function(x, max = NULL, ...)
 {
     if(is.null(max)) max <- getOption("max.print", 9999L)
     if(max < length(x)) {
-	print(format(x[seq_len(max)]), max=max, ...)
-	cat(' [ reached getOption("max.print") -- omitted',
+	print(format(x[seq_len(max)]), max=max+1, ...)
+	cat(" [ reached 'max' / getOption(\"max.print\") -- omitted",
 	    length(x) - max, 'entries ]\n')
     } else if(length(x))
 	print(format(x), max = max, ...)
@@ -233,7 +233,7 @@ as.list.Date <- function(x, ...)
     lapply(unclass(x), .Date, oldClass(x))
 
 c.Date <- function(..., recursive = FALSE)
-    .Date(c(unlist(lapply(list(...), unclass))))
+    .Date(c(unlist(lapply(list(...), unclass))))# recursive=recursive << FIXME?
 
 mean.Date <- function (x, ...)
     .Date(mean(unclass(x), ...))
