@@ -393,19 +393,20 @@ format.POSIXct <- function(x, format = "", tz = "", usetz = FALSE, ...)
               names = names(x))
 }
 
-## could handle arrays for max.print \\ keep in sync with  print.Date() in ./dates.R
+## keep in sync with  print.Date()  in ./dates.R
 print.POSIXct <-
-print.POSIXlt <- function(x, tz = "", usetz = TRUE, ...)
+print.POSIXlt <- function(x, tz = "", usetz = TRUE, max = NULL, ...)
 {
-    max.print <- getOption("max.print", 9999L)
-    FORM <- if(missing(tz)) function(z) format(x, usetz = usetz)
-	    else function(z) format(x, tz = tz, usetz = usetz)
-    if(max.print < length(x)) {
-	print(FORM(x[seq_len(max.print)]), ...)
-        cat(' [ reached getOption("max.print") -- omitted',
-            length(x) - max.print, 'entries ]\n')
+    if(is.null(max)) max <- getOption("max.print", 9999L)
+    FORM <- if(missing(tz))
+		 function(z) format(z,          usetz = usetz)
+	    else function(z) format(z, tz = tz, usetz = usetz)
+    if(max < length(x)) {
+	print(FORM(x[seq_len(max)]), max=max+1, ...)
+	cat(" [ reached 'max' / getOption(\"max.print\") -- omitted",
+	    length(x) - max, 'entries ]\n')
     } else if(length(x))
-	print(FORM(x), max = max.print, ...)
+	print(FORM(x), max = max, ...)
     else
 	cat(class(x)[1L], "of length 0\n")
     invisible(x)
@@ -831,10 +832,10 @@ function(..., recursive = FALSE)
     }
 }
 
-`length<-.difftime` <- 
+`length<-.difftime` <-
 function(x, value)
     .difftime(NextMethod(), attr(x, "units"), oldClass(x))
-    
+
 ## ----- convenience functions -----
 
 seq.POSIXt <-
@@ -1187,7 +1188,7 @@ function(x, units = c("secs", "mins", "hours", "days", "months", "years"))
         if(!is.character(j) || (length(j) != 1L))
             stop("component subscript must be a character string")
 
-    if(!length(value)) 
+    if(!length(value))
         return(x)
     cl <- oldClass(x)
     class(x) <- NULL
@@ -1215,7 +1216,7 @@ function(x, units = c("secs", "mins", "hours", "days", "months", "years"))
             x[[j]][i] <- value
         }
     }
-    
+
     class(x) <- cl
     x
 }
@@ -1392,7 +1393,7 @@ as.list.POSIXlt <- function(x, ...)
 {
     nms <- names(x)
     names(x) <- NULL
-    y <- lapply(X = do.call(Map, c(list(list), unclass(x))),
+    y <- lapply(X = do.call(Map, c(list, unclass(x))),
                 FUN = .POSIXlt, attr(x, "tzone"), oldClass(x))
     names(y) <- nms
     y
@@ -1404,7 +1405,7 @@ as.list.POSIXlt <- function(x, ...)
 {
     cl <- oldClass(x)
     class(x) <- NULL
-    
+
     if(!missing(i) && is.character(i)) {
         nms <- names(x$year)
         for(n in names(x))
